--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: welcome to project
-description: Kotlin samples
+title: welcome to project 5
+description: Kotlin samples 5
