--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ repositories {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: '1.2.71'
 }
 
 compileKotlin {
