--- a/build.gradle
+++ b/build.gradle
@@ -1,33 +1,23 @@
-buildscript {
-    ext.kotlin_version = '1.3.11'
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
+plugins {
+    id 'java'
+    id 'org.jetbrains.kotlin.jvm' version '1.4.10'
 }
 
-group 'KotlinSamples'
+group 'org.example'
 version '1.0-SNAPSHOT'
-
-apply plugin: 'java'
-apply plugin: 'kotlin'
-
-sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib"
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: '1.2.71'
-    compile group: 'org.apache.poi', name: 'poi', version: '4.0.1'
-    compile group: 'org.apache.poi', name: 'poi-ooxml', version: '4.0.1'
-    compile group: 'org.apache.poi', name: 'poi-ooxml-schemas', version: '4.0.1'
-    compile group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-core', version: '1.3.1'
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.2.71"
+    implementation "org.apache.poi:poi:4.0.1"
+    implementation "org.apache.poi:poi-ooxml:4.0.1"
+    implementation "org.apache.poi:poi-ooxml-schemas:4.0.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.1"
 
 }
 
